# strix.rs

./: .gitignore  Cargo.toml  README.md
crates/strix-backend-cpu/: Cargo.toml
crates/strix-backend-cpu/src/: attention.rs  gemma.rs  gemma3n.rs  kv_cache.rs  lib.rs  llama.rs  mellum.rs  mellum_npu.rs  ops.rs  qwen3.rs  qwen35.rs  smollm3.rs
crates/strix-backend-npu/: Cargo.toml  build.rs
crates/strix-backend-npu/examples/: bench_npu.rs  npu_attn_test.rs  npu_loadtest.rs
crates/strix-backend-npu/src/: lib.rs  npu_shim.cpp
crates/strix-backend-rocm/: Cargo.toml  build.rs
crates/strix-backend-rocm/examples/: deltanet_check.rs
crates/strix-backend-rocm/src/: decode.rs  ffi.rs  hip.rs  kernels.rs  lib.rs  npu_hybrid.rs
crates/strix-backend-vulkan/: Cargo.toml
crates/strix-backend-vulkan/src/: accel.rs  ash_decode.rs  ash_gpu.rs  compute.rs  lib.rs  qgemv.rs
crates/strix-backend-vulkan/src/shaders/: q4_dp4a.comp  q4_dp4a.spv
crates/strix-cli/: Cargo.toml
crates/strix-cli/src/: cli.rs  main.rs
crates/strix-cli/src/commands/: bench_dummy.rs  bench_matmul.rs  device_info.rs  generate.rs  inspect.rs  mod.rs  serve.rs  stubs.rs
crates/strix-core/: Cargo.toml
crates/strix-core/src/: accel.rs  backend.rs  benchmark.rs  device.rs  dtype.rs  error.rs  kv_cache.rs  lib.rs  model_config.rs  sampler.rs  tensor.rs  tokenizer.rs
crates/strix-models/: Cargo.toml
crates/strix-models/examples/: chat_render.rs  decode_ids.rs  dump_gguf.rs  find_token.rs  gguf_types.rs  mxfp4_probe.rs  tensor_stats.rs  test_gguf_tokenizer.rs  verify_tokenizer.rs
crates/strix-models/src/: chat_template.rs  ggml_quant.rs  gguf.rs  hf_config.rs  inspect.rs  lib.rs  safetensors_loader.rs  tokenizer.rs
docs/npu-build/attention/: MULTICORE_MMUL_PLAN.md  Makefile  README.md  attention.cc  attention.py  attention_mc.py  attention_mc2.py  attention_mmul.cc
