[package]
name = "strix-backend-cpu"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "CPU reference backend for Strix (correctness over speed)."

[dependencies]
strix-core.workspace = true
strix-models.workspace = true
tracing.workspace = true
rayon.workspace = true
