[package]
name = "strix-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Core traits and types for the Strix local LLM runner."

[dependencies]
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
half.workspace = true
tracing.workspace = true
