[package]
name = "strix-models"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Model architecture configs and loading boundaries for Strix."

[dependencies]
strix-core.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
safetensors.workspace = true
memmap2.workspace = true
half.workspace = true
tokenizers.workspace = true
